--- a/css/components/Cards.css
+++ b/css/components/Cards.css
@@ -1,10 +1,3 @@
-.cards{
-    margin-bottom: 100px;
-    width:30px;
-    display: inline;
-    padding: 0;
-}
-
 .cards > li {
     width: 223px;
     display: inline;
